--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "content-interfaces",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "npm run build",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/MagicConnect/content-interfaces/issues"
   },
-  "homepage": "https://github.com/MagicConnect/content-interfaces#readme"
+  "homepage": "https://github.com/MagicConnect/content-interfaces#readme",
+  "devDependencies": {
+    "typescript": "^4.5.4"
+  }
 }
