Add io-ts codecs for all interfaces

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "lib": ["ES2017"],
+    "strict": true
   },
   "include": ["./src/**/*"]
 }
