--- a/package.json
+++ b/package.json
@@ -19,6 +19,20 @@
   },
   "homepage": "https://github.com/MagicConnect/content-interfaces#readme",
   "devDependencies": {
+    "ava": "^3.15.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "fp-ts": "^2.11.5",
+    "io-ts": "^2.2.16"
+  },
+  "ava": {
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
   }
 }
