--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "prepare": "npm run build",
     "build": "tsc"
   },
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/MagicConnect/content-interfaces#readme",
   "devDependencies": {
     "ava": "^3.15.0",
+    "prettier": "^2.7.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
