change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "content-interfaces",
+  "name": "@magicconnect/content-interfaces",
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
