--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "@magicconnect/content-interfaces",
   "version": "1.0.0",
   "description": "",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
+  "files": ["lib", "src"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "prepublish": "npm run prepare",
     "prepare": "npm run build",
     "build": "tsc"
   },
